<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount_label">Bill Amount</string>
	<string name="tip_amount_label">Tip Amount</string>
	<string name="tip_percentage_label">Tip %</string>
	<string name="bill_details_label">Summary</string>
	<string name="total_amount_label">Total</string>
    <string name="currency_symbol">$</string>
    <string name="title_activity_details">Summary</string>
    <string name="bill_amount_prompt">Enter bill amount:</string>
    <string name="service_level_prompt">How satisfied are you with the service?</string>
    <string name="person_amount_label">Amount per person</string>
    <string name="split_bill_label">Split</string>
</resources>
